kubernetes/go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stablecog-go-ingress
  namespace: stablecog
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.org/proxy-connect-timeout: 180s
    nginx.org/proxy-read-timeout: 180s
    nginx.org/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'stablecog_session'
    nginx.ingress.kubernetes.io/session-cookie-expires: '600'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '600'
spec:
  tls:
    - hosts:
        - api.stablecog.com
      secretName: stablecog-go-server-secret
  rules:
    - host: api.stablecog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stablecog-go-service
                port:
                  number: 3001
